--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
     <version>5.7.5</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/com.github.mkolisnyk/cucumber-reports -->
+<dependency>
+    <groupId>com.github.mkolisnyk</groupId>
+    <artifactId>cucumber-reports</artifactId>
+    <version>1.3.5</version>
+    <type>pom</type>
+</dependency>
 
       </dependencies>
       
